<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    
    <item
        android:id="@+id/action_hex_viewer"
        android:title="@string/str_visor_hexadecim"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_hex_diff"
        android:title="@string/str_comparar_hex"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_sha256"
        android:title="@string/str_sha256_menu"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_programmer_settings"
        android:title="@string/str_configuracin_de"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_set_working_dir"
        android:title="@string/str_menu_working_dir"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_dummy_test"
        android:title="@string/str_dummy_test_mode"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_pinouts"
        android:title="@string/str_pinouts_de_hard"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_export_serprog"
        android:title="@string/menu_export_serprog"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_about"
        android:title="@string/str_acerca_de"
        app:showAsAction="never" />
</menu>
